Style max height for choices div to avoid window going out of screen; testing onclick events on coeff inputs

--- a/app/styles/layersettings.scss
+++ b/app/styles/layersettings.scss
@@ -67,3 +67,9 @@
 .custom_model_operation_coefficient{
   width:22px;
 }
+.choices__list--multiple{
+  max-height: 225px;
+  overflow-y: auto;
+  display: block!important;
+}
+
